--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,14 @@
       <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
       <title><%= htmlWebpackPlugin.options.title %></title>
    </head>
-   <body style="height: 89.5%">
+   <body>
       <noscript>
          <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
       </noscript>
       <div id="app"></div>
       <!-- built files will be auto injected -->
    </body>
+
+   <!-- Inconify -->
+   <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
 </html>
